--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       </section>
     <!-- Aqui termina a section cards -->
 
+    <!-- Aqui começa o footer -->
+    <!-- Aqui termina o footer -->
+
       <script src="./JS/js.js"></script>
 </body>
 </html>
