--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
     <!-- Aqui termina a section cards -->
 
     <!-- Aqui começa o footer -->
+     <footer>
+      <div id="black">
+        <p>©2024 - Todos os direitos reservados</p>
+        <p>Desenvolvido por Gustavo Moura De Jesus</p>
+      </div>
+     </footer>
     <!-- Aqui termina o footer -->
 
       <script src="./JS/js.js"></script>
