--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
      <footer>
       <div id="black">
         <p>©2024 - Todos os direitos reservados</p>
-        <p>Desenvolvido por Gustavo Moura De Jesus</p>
+        <p>Desenvolvido por Gustavo Moura De Jesus fd</p>
       </div>
      </footer>
     <!-- Aqui termina o footer -->
